# ChangeLog for dev-perl/DBD-mysql
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/DBD-mysql/ChangeLog,v 1.35 2005/05/01 16:43:51 slarti Exp $

  01 May 2005; Tom Martin <slarti@gentoo.org> DBD-mysql-2.9003.ebuild:
  Stable on amd64.

  30 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  DBD-mysql-2.9003.ebuild:
  Stable on ppc.

  26 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  DBD-mysql-2.9003.ebuild:
  Stable on ia64.

  25 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  DBD-mysql-2.9003.ebuild:
  Stable on sparc

*DBD-mysql-2.9006 (25 Apr 2005)

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -DBD-mysql-2.1013-r1.ebuild, -DBD-mysql-2.1013.ebuild,
  DBD-mysql-2.9003.ebuild, -DBD-mysql-2.9004.ebuild, +DBD-mysql-2.9006.ebuild:
  cleaning and bumping

  19 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  DBD-mysql-2.1027.ebuild:
  Stable on ppc.

  20 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> DBD-mysql-2.9004.ebuild:
  Keyworded ~sparc

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*DBD-mysql-2.9004 (24 Dec 2004)

  24 Dec 2004; Simon Stelling <blubb@gentoo.org> DBD-mysql-2.9004.ebuild:
  added ~amd64

  23 Nov 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed digest.

  01 Jun 2004; Tom Gall <tgall@gentoo.org> DBD-mysql-2.9003.ebuild:
  stable on ppc64, bug #52701

  26 May 2004; Bryan Østergaard <kloeri@gentoo.org> DBD-mysql-2.9003.ebuild:
  Stable on alpha.

  02 Apr 2004; <randy@gentoo.org> DBD-mysql-2.9003.ebuild:
  adding s390 keywords

  21 Mar 2004; Joshua Kinard <kumba@gentoo.org> DBD-mysql-2.1013-r1.ebuild,
  DBD-mysql-2.1013.ebuild, DBD-mysql-2.1027.ebuild, DBD-mysql-2.9003.ebuild:
  Marked stable on mips.

  04 Feb 2004; Joshua Kinard <kumba@gentoo.org> DBD-mysql-2.9003.ebuild:
  Added ~mips to KEYWORDS

  24 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>