@@ -1,19 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 24bca4d844745eab2db7bee142d9fc60 ChangeLog 4196
-MD5 a6ae96f1686c621af79bc868a36a7415 DBD-mysql-2.1027.ebuild 562
-MD5 f963567c927264770cccb90cd4a506a5 DBD-mysql-2.9003.ebuild 574
-MD5 5cff6a3b35e40faf94472d7d9b11ed7b DBD-mysql-2.9006.ebuild 572
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-MD5 7ecc1256ea43958c453832e0e11e5d1e files/digest-DBD-mysql-2.9006 68
+MD5 50ec3ef49ed148bc19f097bb91396da9 ChangeLog 4317
+MD5 17f2f2a0a06edd5bd7bcac068b268b4b DBD-mysql-2.9007.ebuild 600
+MD5 5cff6a3b35e40faf94472d7d9b11ed7b DBD-mysql-2.9006.ebuild 572
+MD5 f963567c927264770cccb90cd4a506a5 DBD-mysql-2.9003.ebuild 574
+MD5 a6ae96f1686c621af79bc868a36a7415 DBD-mysql-2.1027.ebuild 562
 MD5 1e7e8cdcdfe45851d63691a85f463762 files/makemaker.patch 398
-MD5 5213da48718338e1d1164d1c5479d18b files/digest-DBD-mysql-2.9003 68
+MD5 7ecc1256ea43958c453832e0e11e5d1e files/digest-DBD-mysql-2.9006 68
 MD5 f40eecb7d598ce677826cb398539758f files/digest-DBD-mysql-2.1027 67
+MD5 5213da48718338e1d1164d1c5479d18b files/digest-DBD-mysql-2.9003 68
+MD5 77d091a5ff85d5d195d78693a662fae3 files/digest-DBD-mysql-2.9007 68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCdQdfCHk4+ZoBpvsRAilKAJ9xtAXvCi4L9hBm4dcTCFGhCTSmrgCgvFRs
-zptTftgid2rH3TVks4j6UOg=
-=c5+Z
+iD8DBQFCgXzRjUHll2nfF60RAnU6AJ9JqPxt5SmScQW/iDJ5D0egQ4g+cgCgqc75
+sjXm+mF2MN3Wl1c6zITrPkc=
+=WGTx
 -----END PGP SIGNATURE-----
